# daemon

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
inc/: TCPconnection.hpp  TCPserver.hpp  cpu_ram_calculator.hpp
src/: TCPclient.cpp  TCPconnection.cpp  TCPserver.cpp  client.cpp  server.cpp
